--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/apartment.css">
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive(767px).css">
+    <link rel="stylesheet" href="css/responsive(479px).css">
 
 
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
@@ -123,7 +124,7 @@
                 </div>
 
             </div>
-            <div class="flex-1"> 
+            <div class="img-ab flex-1"> 
                 <div class="img-b">
                     <img src="img/project-2.webp" height="578.4px" width="100%">
                     <div class="items-b ">
